Change comment format to not render

--- a/slides/2018/05-may/index.pug
+++ b/slides/2018/05-may/index.pug
@@ -34,7 +34,7 @@ html
   
   body.deck-container.language-javascript
 
-    //====================  Intro  ====================
+    //----------------------  Intro  ----------------------
 
     section.slide.cover.home
       h1(style='font-size:4em;top:30%;') Bleeding Edge Web
@@ -60,7 +60,7 @@ html
         | &mdash; Victoria Bernard
     
 
-    //====================  Sponsors  ====================
+    //----------------------  Sponsors  ----------------------
 
     section.slide.cover(style='background-image:url(../../shared/resources/images/capitalfactory-bg.jpg)')
       p(style='color: #fff;') Thanks to our venue:
@@ -80,7 +80,7 @@ html
     section.slide.cover(style='background-image:url(./images/cloudflare-stickers.jpg)')
       p(style='color: #fff;') Thanks to our sponsor:
     
-    //====================  Housekeeping  ====================
+    //----------------------  Housekeeping  ----------------------
 
     section.slide
       h2 Housekeeping
@@ -92,7 +92,7 @@ html
         li Driskill Bar after meetup
         li Anyone hiring / looking?
 
-    //====================  Begin slides  ====================
+    //----------------------  Begin slides  ----------------------
     
     section.slide.cover(style='background-image:url(../../shared/resources/images/newspaper.gif)')
       h1 News from the<br>Bleeding Edge
@@ -200,7 +200,7 @@ html
       p Most importantly...
       blockquote Dramatically reduced the power efficiency impact of rendering animated GIFs
 
-    //====================  Libs & Frameworks  ====================
+    //----------------------  Libs & Frameworks  ----------------------
     
     section.slide.cover(style='background-image:url(../../shared/resources/images/html-js-css.png)')
       h1 Languages, Libraries &amp;<br>Frameworks
@@ -255,7 +255,7 @@ html
         li Hyper, NetHack, Flask, Nerd Fonts, Monica, and 
           a(href='https://blog.github.com/2018-05-09-release-radar-april-2018/') lots more
 
-    //====================  Security  ====================
+    //----------------------  Security  ----------------------
     
     section.slide.cover(style='background-image:url(../../shared/resources/images/security.jpg)')
       .content
@@ -290,7 +290,7 @@ html
       img(src='./images/npm-audit.png', alt='npm audit', style='width:50%')
 
     
-    //====================  ICYMI  ====================
+    //----------------------  ICYMI  ----------------------
     section.slide.cover(style='background-image:url(../../shared/resources/images/icymi.jpg)')
       .content
         h1 In Case You<br>Missed It
@@ -321,7 +321,7 @@ html
         a(href='http://diana-adrianne.com/purecss-zigario/') Zigario
       img(src='./images/francine.png', alt='Francine')
 
-    //====================  Something Completely Different  ====================
+    //----------------------  Something Completely Different  ----------------------
     
     section.slide.cover(style='background-image:url(../../shared/resources/images/anfscd.jpg)')
       h1 And now for something completely different...
@@ -342,7 +342,7 @@ html
       img(src='./images/posenet.gif', alt='PoseNet demo')
 
     
-    //====================  Fin  ====================
+    //----------------------  Fin  ----------------------
     
     se
     ction.slide
@@ -357,7 +357,7 @@ html
       img(src='../../shared/resources/images/bleeding-web.gif', alt='Bleeding Edge Web', style='display: block; max-width: 20vw;')
     
 
-    //====================  Slide stuff  ====================
+    //----------------------  Slide stuff  ----------------------
 
     // Begin extension snippets. Add or remove as needed.
     // deck.navigation snippet
