--- a/slides/2018/05-may/index.pug
+++ b/slides/2018/05-may/index.pug
@@ -89,7 +89,7 @@ html
           a(href='https://www.edgeatx.org') edgeatx.org
           | )
         li $5 Parking validation
-        li Driskill Bar after meetup
+        li Omni hotel bar (downstairs) after meetup
         li Anyone hiring / looking?
 
     //----------------------  Begin slides  ----------------------
