--- a/slides/2018/05-may/index.pug
+++ b/slides/2018/05-may/index.pug
@@ -149,6 +149,7 @@ html
 
     section.slide
       h2 Firefox 60
+      img(src='../../shared/resources/images/firefox.png', class='corner-image', width='200px', alt='Firefox')
       p Released May 9th —
         a(href='https://developer.mozilla.org/en-US/Firefox/Releases/60') Release Notes
       h3.star New APIs
@@ -168,6 +169,7 @@ html
 
     section.slide
       h2 Edge 17
+      img(src='../../shared/resources/images/edge.png', class='corner-image', width='200px', alt='Edge')
       p Released May 8th —
         a(href='https://aka.ms/devguide_edgehtml_17') Release Notes
       h3.star New APIs
@@ -189,6 +191,7 @@ html
 
     section.slide
       h2 Edge 17
+      img(src='../../shared/resources/images/edge.png', class='corner-image', width='200px', alt='Edge')
       h3.star Interesting Consumer Features
       ul
         li Reading tools (annotations, grammar tools)
