--- a/slides/2018/08-aug/index.pug
+++ b/slides/2018/08-aug/index.pug
@@ -177,6 +177,42 @@ html
       h1 Languages, Libraries &amp;<br>Frameworks
       .shim(style='background-color:#AD7909;opacity:.8;')
   
+    section.slide
+      h2 TypeScript 3.0
+      img(src='../../shared/resources/images/typescript-logo.jpg', class='corner-image', width='200px', alt='TypeScript')
+      p
+        a(href="https://blogs.msdn.microsoft.com/typescript/2018/07/30/announcing-typescript-3-0/") Released 
+        | July 20th
+      ul
+        li Project references and new 
+          span.code --build
+          |  mode
+        li Richer tuple support
+        li Support for JSX 
+          span.code defaultProps
+        li Improved error handling &amp; editor features
+        li 
+          strong NOTE:
+          |   There are a few 
+          a(href="https://blogs.msdn.microsoft.com/typescript/2018/07/30/announcing-typescript-3-0/#breaking-changes") breaking changes
+
+    section.slide
+      h2 Vue CLI 3.0
+      img(src='../../shared/resources/images/vue-logo.png', class='corner-image', width='200px', alt='Vue')
+      p 
+        a(href="https://medium.com/the-vue-point/vue-cli-3-0-is-here-c42bebe28fbb") Released 
+        | August 10th
+      ul
+        li Pre-configured (+configurable) webpack 4 build system
+        li ES2017+ support
+        li PostCSS + autoprefixer enabled
+        li
+          a(href="https://cli.vuejs.org/guide/build-targets.html#app") Build targets
+        li
+          a(href="https://cli.vuejs.org/guide/browser-compatibility.html#usebuiltins-usage") "Modern Mode"
+        li Plugins for Vuex, TypeScript, PWA, Jest, Prettier, etc.
+        li 
+          a(href="https://medium.com/the-vue-point/vue-cli-3-0-is-here-c42bebe28fbb") And lots more!
 
 
     //----------------------  Security  ----------------------
